--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 ﻿# Backend API URL - ใช้ IP เดียวกับที่ access frontend แต่ port 3000
-VITE_API_URL=http://192.168.50.5:3000/apiเ
+VITE_API_URL=http://192.168.50.5:3000/api
 VITE_SOCKET_URL=http://192.168.50.5:3000
+
+# Google OAuth Client ID (ต้องตรงกับ GOOGLE_CLIENT_ID ใน backend)
+VITE_GOOGLE_CLIENT_ID=938732644108-f1obpnl200p8m2dn3hh22623m0atejn3.apps.googleusercontent.com
