--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/websockets": "^10.0.0",
     "@prisma/client": "^5.7.1",
     "@types/nodemailer": "^7.0.5",
@@ -40,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "google-auth-library": "^10.5.0",
+    "helmet": "^8.1.0",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
