--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-oauth/google": "^0.13.4",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.6.2",
     "clsx": "^2.1.0",
     "framer-motion": "^12.23.26",
